[tool]
[tool.poetry]
name = "rusticai"
version = "0.1.0"
homepage = "https://github.com/pierian-xyz/rusticai"
description = "Plain and Simple AI."
authors = ["Rohit Rai <inbox@rohitrai.com>"]
readme = "README.md"
license =  "Apache-2.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "rustic_ai" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

isort  = { version = "^5.8.0", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
virtualenv  = { version = "^20.2.2", optional = true}
mkdocs-material-extensions  = { version = "^1.0.1", optional = true}
toml = {version = "^0.10.2", optional = true}
jinja2 = "3.0.3"
shortuuid = "^1.0.11"
hiredis = "^2.2.2"
redis = "^4.5.4"
redis-om = "^0.1.2"
sqlalchemy = "^2.0.13"
fakeredis = "^2.12.1"
snowballstemmer = "^2.2.0"
pip = "^23.1.2"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.5.1"
mypy = "^1.3.0"
mkdocs = "^1.4.3"
mkdocstrings = "^0.21.2"
mkdocs-material = "^9.1.14"
mkdocs-include-markdown-plugin = "^4.0.4"
mkdocstrings-python = "^1.0.0"
twine = "^4.0.2"
black = "^23.3.0"
bump2version = "^1.0.1"
toml = "^0.10.2"
setuptools = "^67.8.0"
pytest-cov = "^4.0.0"
pydocstyle = "^6.3.0"
pre-commit = "^3.3.2"
isort = "^5.12.0"
flake8-docstrings = "^1.7.0"
sqlalchemy-stubs = "^0.4"
flake8 = "^5.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
